--- a/about.html
+++ b/about.html
@@ -19,35 +19,35 @@
             <div class="container-fluid"> 
                 <div class="m-2 px-2">
                     <div class="row ">
-                        <div class="col-6 "><a href="index.html">hoMe</a></div>
-                        <div class="col-6 text-end"><p class="navi-off">aBout</p></div>
+                        <div class="col-6 "><a href="index.html">home</a></div>
+                        <div class="col-6 text-end"><p class="navi-off">about</p></div>
                         <div class="col-12 align-self-center">                            
-                            <h1 class="text-center d-none d-lg-block">poRtfolio</h1>
-                            <h2 class="text-center d-none d-sm-block d-lg-none">poRtfolio</h2>
-                            <h4 class="text-center d-sm-none d-lg-none">poRtfolio</h4>
+                            <h1 class="text-center d-none d-lg-block">portfolio</h1>
+                            <h2 class="text-center d-none d-sm-block d-lg-none">portfolio</h2>
+                            <h4 class="text-center d-sm-none d-lg-none">portfolio</h4>
                         </div>
-                        <div class="col-6 align-self-end "><a href="contact.html">contAct</a></div>
-                        <div class="col-6 align-self-end text-end"><a href="cv.html">cV</a></div>
+                        <div class="col-6 align-self-end "><a href="contact.html">contact</a></div>
+                        <div class="col-6 align-self-end text-end"><a href="cv.html">CV</a></div>
                     </div>
                 </div>
             </div>
         </nav>
         <div class="navbar navbar-dark d-sm-none fixed-top border border-light bg-black">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">Portfolio</a>
+              <a class="navbar-brand" href="index.html">portfolio</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="about.html">aBout</a>
+                    <a class="nav-link" href="about.html">about</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.html">contAct</a>
+                    <a class="nav-link" href="contact.html">contact</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="cv.html">cV</a>
+                    <a class="nav-link" href="cv.html">CV</a>
                   </li>
                 </ul>
               </div>
@@ -68,7 +68,7 @@
                     <profileCard class="col my-auto">                    
                         <profileName class="border-bottom">
                         <h3>
-                            tea sAloNsaari
+                            Tea Salonsaari
                         </h3>
                     </profileName>   
                     <div class="card">                        
