--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
             <div class="container-fluid"> 
                 <div class="m-2 px-2">
                     <div class="row ">
-                        <div class="col-6 "><p class="navi-off">hoMe</p></div>
-                        <div class="col-6 text-end"><a href="about.html" >aBout</a></div>
+                        <div class="col-6 "><p class="navi-off">home</p></div>
+                        <div class="col-6 text-end"><a href="about.html" >about</a></div>
                         <div class="col-12 align-self-center">                            
-                            <h1 class="text-center d-none d-lg-block">poRtfolio</h1>
-                            <h2 class="text-center d-none d-sm-block d-lg-none">poRtfolio</h2>
-                            <h4 class="text-center d-sm-none d-lg-none">poRtfolio</h4>
+                            <h1 class="text-center d-none d-lg-block">portfolio</h1>
+                            <h2 class="text-center d-none d-sm-block d-lg-none">portfolio</h2>
+                            <h4 class="text-center d-sm-none d-lg-none">portfolio</h4>
                         </div>
-                        <div class="col-6 align-self-end "><a href="contact.html">contAct</a></div>
-                        <div class="col-6 align-self-end text-end"><a href="cv.html">cV</a></div>
+                        <div class="col-6 align-self-end "><a href="contact.html">contact</a></div>
+                        <div class="col-6 align-self-end text-end"><a href="cv.html">CV</a></div>
                     </div>
                 </div>
             </div>
@@ -40,13 +40,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">aBout</a>
+                  <a class="nav-link" href="about.html">about</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">contAct</a>
+                  <a class="nav-link" href="contact.html">contact</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="cv.html">cV</a>
+                  <a class="nav-link" href="cv.html">CV</a>
                 </li>
               </ul>
             </div>
@@ -64,64 +64,26 @@
                 <a class="nav-link" href="#">Link</a>
                 <a class="nav-link disabled">Disabled</a>
               </mininav>
-            </div
-    -->
-    <main class="container py-sm-5 text-center justify-content-center align-content-center">
-               
-        
-        <menu class="row g-1 g-lg-2 text-center justify-content-center align-content-center  p-1"> 
-            <div class="col-12 col-sm-11 mx-auto">
-              <div class="container-fluid pt-5 px-0">
-                <div class="row g-1 g-lg-2 text-center justify-content-center align-content-center">
-                  <div class="col-12">
-                    <div class="menu-box position-relative text-center bg-secondary rounded ">
-                            <a href="#photos"> 
-                                <img src="resources/img/4.jpg" alt="photo">
-                                <h5 class="position-absolute top-50 start-50 translate-middle">photoGraphy</h5>
-                                <div class="position-absolute top-0 start-0 overlay h-100 w-100">
-                                    <h5 class="position-absolute top-50 start-50 translate-middle">photoGraphy</h5>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 ">
-                        <div class="menu-box position-relative text-center bg-secondary rounded ">
-                            <a href="#art">                        
-                                <img src="resources/art/5.jpg" alt="button to art">
-                                <h5 class="position-absolute top-50 start-50 translate-middle">Art</h5>
-                                <div class="position-absolute top-0 start-0 overlay h-100 w-100">
-                                    <h5 class="position-absolute top-50 start-50 translate-middle">Art</h5>
-                                </div>
-                            </a> 
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 ">
-                        <div class="menu-box position-relative text-center bg-secondary rounded ">
-                            <a href="#sketches">
-                                <img src="resources/sketch/2.jpg" alt="button to sketches">
-                                <h5 class="position-absolute top-50 start-50 translate-middle">sKetcHes</h5>
-                                <div class="position-absolute top-0 start-0 overlay h-100 w-100">
-                                    <h5 class="position-absolute top-50 start-50 translate-middle">sKetcHes</h5>
-                                </div>
-                            </a>
-                        </div> 
-                    </div>
-                    <div class="col-12">
-                        <div class="menu-box position-relative text-center bg-secondary rounded ">
-                            <a href="#web">
-                                <img src="resources/web/web3.png" alt="">
-                                <h5 class="position-absolute top-50 start-50 translate-middle">DiGiiAl MediA</h5>
-                                <div class="position-absolute top-0 start-0 overlay h-100 w-100">
-                                    <h5 class="position-absolute top-50 start-50 translate-middle">DiGiiAl MediA</h5>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
             </div>
-          </div>
-        </menu>   
-        <div class="col-12 col-sm-11 mx-auto">
+    -->
+    <main class="container text-center justify-content-center align-content-center">
+      <sisalto class="card">
+        <korttinavi class="card-header">
+          <ul class="nav justify-content-center">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">PROJECTS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">PHOTOS</a>
+            </li>
+          </ul>
+        </korttinavi>
+
+        <album class="album">
+
+        </album>
+      </sisalto>
+        <!--<div class="col-12 col-sm-11 mx-auto">
           <content>
             <div class="container album px-0" id="photos">
               <div class="row my-5 text-center justify-content-center align-content-center">
@@ -1126,7 +1088,7 @@
               </div>
             </div>       
           </content>
-        </div>
+        </div>-->
     </main>
     <footer>
         &COPY; Tea Salonsaari
