--- a/index.html
+++ b/index.html
@@ -57,20 +57,62 @@
 
     </div>
   </header>
-    <!--<div>
-        <div class="lines"></div>
-    </div> 
-                  <div class="sticky-bottom">            
-              <mininav class="nav flex-column">
-                <a class="nav-link active" aria-current="page" href="#">Active</a>
-                <a class="nav-link" href="#">Link</a>
-                <a class="nav-link" href="#">Link</a>
-                <a class="nav-link disabled">Disabled</a>
-              </mininav>
+  <main class="container py-sm-5 text-center justify-content-center align-content-center">
+               
+        
+    <menu class="row g-1 g-lg-2 text-center justify-content-center align-content-center  p-1"> 
+        <div class="col-12 col-sm-11 mx-auto">
+          <div class="container-fluid pt-5 px-0">
+            <div class="row g-1 g-lg-2 text-center justify-content-center align-content-center">
+              <div class="col-12">
+                <div class="menu-box position-relative text-center bg-secondary rounded ">
+                        <a href="#photos"> 
+                            <img src="resources/img/4.jpg" alt="photo">
+                            <h5 class="position-absolute top-50 start-50 translate-middle">photoGraphy</h5>
+                            <div class="position-absolute top-0 start-0 overlay h-100 w-100">
+                                <h5 class="position-absolute top-50 start-50 translate-middle">photoGraphy</h5>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 ">
+                    <div class="menu-box position-relative text-center bg-secondary rounded ">
+                        <a href="#art">                        
+                            <img src="resources/art/5.jpg" alt="button to art">
+                            <h5 class="position-absolute top-50 start-50 translate-middle">Art</h5>
+                            <div class="position-absolute top-0 start-0 overlay h-100 w-100">
+                                <h5 class="position-absolute top-50 start-50 translate-middle">Art</h5>
+                            </div>
+                        </a> 
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 ">
+                    <div class="menu-box position-relative text-center bg-secondary rounded ">
+                        <a href="#sketches">
+                            <img src="resources/sketch/2.jpg" alt="button to sketches">
+                            <h5 class="position-absolute top-50 start-50 translate-middle">sKetcHes</h5>
+                            <div class="position-absolute top-0 start-0 overlay h-100 w-100">
+                                <h5 class="position-absolute top-50 start-50 translate-middle">sKetcHes</h5>
+                            </div>
+                        </a>
+                    </div> 
+                </div>
+                <div class="col-12">
+                    <div class="menu-box position-relative text-center bg-secondary rounded ">
+                        <a href="#web">
+                            <img src="resources/web/web3.png" alt="">
+                            <h5 class="position-absolute top-50 start-50 translate-middle">DiGiiAl MediA</h5>
+                            <div class="position-absolute top-0 start-0 overlay h-100 w-100">
+                                <h5 class="position-absolute top-50 start-50 translate-middle">DiGiiAl MediA</h5>
+                            </div>
+                        </a>
+                    </div>
+                </div>
             </div>
-    -->
-
-<div class="col-12 col-sm-11 mx-auto">
+        </div>
+      </div>
+    </menu>   
+    <div class="col-12 col-sm-11 mx-auto">
           <content>
             <div class="container album px-0" id="photos">
               <div class="row my-5 text-center justify-content-center align-content-center">
